Fix mouse-animation and adjust spacing

--- a/css/section-education.css
+++ b/css/section-education.css
@@ -1,7 +1,7 @@
 #education {
     background-color: #fafafa;
     display: flex;
-    padding: 60px 0;
+    padding-bottom: 60px;
     width: 100%;
 }
 
