--- a/css/section-skills.css
+++ b/css/section-skills.css
@@ -1,7 +1,7 @@
 #skills {
     background-color: #fafafa;
     display: flex;
-    padding: 80px 0 120px;
+    padding-bottom: 80px;
     width: 100%;
 }
 
